# Cpp-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
cmake/: buildImgui.cmake
docs/: CMakeLists.txt
include/: MyClass.hpp
src/: CMakeLists.txt  MyClass.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
